tests/lean/univ.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Defined: TypeM
univ.lean:29:0 error: universe constraint produces an integer overflow: Z2 >= Z1 + 1073741824
univ.lean:42:0 error: universe constraint inconsistency: U1 >= U4 + 0
